--- a/FriendsMess/Views/Update/New.cshtml
+++ b/FriendsMess/Views/Update/New.cshtml
@@ -6,13 +6,13 @@
     <div style="float: right">
         @Html.ValidationSummary(true, "Please fix these errors", new { @class = "error" })
     </div>
-    <h2 style="text-align: center; color:white">Update meals</h2>
+    @*<h2 style="text-align: center;margin-top: 10px;">Update meals</h2>*@
     @if (Model.Members.Count > 0)
     {
         using (Html.BeginForm("Save", "Update"))
         {
 
-            <div style="float: left; width: 50%; margin-left: 6%; padding-bottom: 20px; margin-right:2% ">
+            <div style="float: left; width: 50%; margin-left: 6%; padding-bottom: 20px; margin-right: 2%; margin-top: 10px;">
                 @{
                     var i = 0;
                 }
@@ -50,7 +50,7 @@
                 </table>
             </div>
         
-            <div style="float: right; margin-right: 20%; width: 20%; padding-bottom: 10px;">
+            <div style="float: right; margin-right: 20%; width: 20%; padding-bottom: 10px;margin-top: 20px">
                 <div class="form-group">
                     @Html.LabelFor(m => m.Day)
                     @Html.EditorFor(m => m.Day, new { htmlAttributes = new { @class = "form-control", placeholder = "Select date", @readonly = "true" ,style="background:transparent;color:white" } })
