--- a/FriendsMess/Views/Members/MemberForm.cshtml
+++ b/FriendsMess/Views/Members/MemberForm.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "MemberForm";
 }
 
-<h2>@ViewBag.status</h2>
+<h2>@ViewBag.status  <span class="glyphicon glyphicon-user"></span></h2>
     
 @if (ViewBag.status == "Edit Member")
 {
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.MobileNumber)
-        @Html.TextBoxFor(m => m.MobileNumber, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.MobileNumber, new {@class = "form-control"})
         @Html.ValidationMessageFor(m => m.MobileNumber)
 
     </div>
