--- a/FriendsMess/Views/Shared/_Layout.cshtml
+++ b/FriendsMess/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Members", "Index", "Members")</li>
                     <li>@Html.ActionLink("Expenses", "Expense", "Home")</li>
                     <li>@Html.ActionLink("Update", "New", "Update")</li>
+                    <li>@Html.ActionLink("Assigned Dates", "ShowDates", "Extra")</li>
                     <li>@Html.ActionLink("Others", "Index", "Extra")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
